# SCC-D

./: .gitignore  CMakeLists.txt  README.md  feeder.py  preprocessor.py  runner.py  scc_main.cpp  validater.py
src/: graph.cpp  graph.h  scc_verify.h
src/dynamic/: dynamic.cpp  dynamic.h  scc_delete.h  scc_insert.h
src/static/: scc_color.h  scc_fwbw.h  scc_serial.cpp  scc_serial.h  scc_trim.h  static.cpp  static.h
